# mbo-bekostiging-bestanden

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
app/: _utils.py  config.toml  main.py
app/pages/: home.py  kiezen.py  resultaten.py  stapelen.py  verwerken.py
data/01-raw/demo/: bekostiging_demo.csv
data/01-raw/demo/h15/: RO_21CY_20250730_20250731.csv  RO_25LX_20250101_20251231.csv  RO_27DV_20240731_20260324.csv
data/01-raw/demo/h16/: TBGI_25LX_2027_20251124.XML
data/01-raw/demo/h17/: GRONDSLAG_IP_MBO_27DV_20251119_2025.csv
data/02-prepared/demo/h15/21CY/: AMO.parquet  BPV.parquet  DIP.parquet  GEO.parquet  (+7 more)
docs/: aan-de-slag.md  index.md  waardenlijsten.md
docs/databestanden/: grondslag-ip.md  index.md  ro.md  tbgi.md
docs/recordtypes/: amo.md  bid.md  bii.md  bpv.md  dip.md  geo.md  index.md  ise.md  isg.md  isp.md  kzd.md  per.md  slr.md  vlp.md
src/mbo_bekostiging_bestanden/: __init__.py  cli.py  decode.py  export.py  ingest.py  obt.py  pipeline.py  stack.py  validate.py
src/mbo_bekostiging_bestanden/metadata/: __init__.py  grondslag_schema.toml  ro_schema.toml  tbgi_schema.toml
tests/: conftest.py  test_cli.py  test_decode_multi_record.py  test_decode_ro.py  test_export.py  test_export_ro.py  test_ingest_grondslag.py  test_ingest_multi_record.py  test_ingest_ro.py  test_ingest_tbgi.py  test_metadata.py  test_obt.py  test_pipeline.py  test_pipeline_dispatch.py  test_pipeline_grondslag.py  test_pipeline_tbgi.py  test_stack.py  test_validate_ro.py
(+20 files in other folders)
