[project]
name = "mbo-bekostiging-bestanden"
version = "0.1.0"
description = "Leest DUO MBO-bekostigingsbestanden in en zet ze om naar schone, onderzoeksklare data."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "CEDA", email = "ceda@cedanl.org" }]
dependencies = [
    "polars>=1.0",
    "streamlit>=1.40",
]

[project.scripts]
mbo = "mbo_bekostiging_bestanden.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.0a1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbo_bekostiging_bestanden"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.13"
